--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^4.1.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/node": "^18.0.6",
+    "prisma": "^4.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
