--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "tsnd app/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma": {
+    "seed": "tsnd prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
