--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsnd app/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "dotenv -e .env.dev prisma migrate dev && dotenv -e .env.dev prisma db seed  && dotenv -e .env.dev jest -i"
   },
   "prisma": {
     "seed": "tsnd prisma/seed.ts"
@@ -19,8 +19,13 @@
     "@prisma/client": "^4.1.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
+    "dotenv-cli": "^6.0.0",
+    "jest": "^28.1.3",
     "prisma": "^4.1.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
