--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/app/index.js",
     "dev": "tsnd app/index.ts",
     "test": "dotenv -e .env.dev prisma migrate dev && dotenv -e .env.dev prisma db seed  && dotenv -e .env.dev jest -i"
   },
